@@ -1,3 +1,4 @@
+3/4/13 #10 change ScientificNotationNode to use Property instead of setValue
 3/3/14 #16 add note about indicator code to JSdoc
 3/4/14 #22 added blank lines before comments, as suggested
 # 1.0.0-dev.16 2/27/14
